select all + injectio

--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -1,8 +1,7 @@
-
 <div class="adduser-container">
     <div class="holder">
         <div class="title-holder">
-          <h1 class="title">Update User</h1>
+            <h1 class="title">Update User</h1>
         </div>
         <div class="add-form">
             <div class="field">
@@ -11,7 +10,7 @@
             </div>
             <div class="field">
                 <label>First Name :</label>
-                <mat-form-field >
+                <mat-form-field>
                     <!-- <mat-label>Id User</mat-label> -->
                     <input placeholder="Type the First name..." matInput [(ngModel)]="FirstName" />
                 </mat-form-field>
@@ -40,55 +39,64 @@
             <div class="field">
                 <label>Email :</label>
                 <mat-form-field>
-                     <mat-label>Id User</mat-label>
-                    <input matInput placeholder="Type the email" type="email" [(ngModel)]="userInfo.email" disabled/>
+                    <mat-label>Id User</mat-label>
+                    <input matInput placeholder="Type the email" type="email" [(ngModel)]="userInfo.email" disabled />
                 </mat-form-field>
                 <!-- <button mat-button class="gen-btn" (click)="GenerateEmail()">Generate Email</button> -->
             </div>
             <div class="field">
                 <label>Password :</label>
-               
-                    <mat-form-field >
-                        <mat-label>Id User</mat-label> 
-                        <ng-template  [ngIf]="hidpass" [ngIfElse]="showPass"> 
-                        <input matInput placeholder="Generate the password..." type="password" value="{{userInfo.password}}" disabled/>
-                        </ng-template>
 
-                        <ng-template #showPass>
-                                <input matInput placeholder="Generate the password..." type="type" value="{{userInfo.password}}" disabled/>
-                        </ng-template>
-                </mat-form-field>                
-                
-               
-                <button mat-button class="gen-btn" (click)="GeneratePassword()">Generate Password</button>
-            </div>  
-            <div class="field"> 
-                 <label>Role :</label>
                 <mat-form-field>
-                    <mat-select  panelClass="selectPanel2"   (selectionChange)="onChange()" [(value)]="userInfo.role">
-                        
-                        <div *ngFor="let rol of Roles" >
-                            <mat-option  value="{{rol}}">{{rol}}</mat-option>
-                            </div>
+                    <mat-label>Id User</mat-label>
+                    <ng-template [ngIf]="hidpass" [ngIfElse]="showPass">
+                        <input matInput placeholder="Generate the password..." type="password"
+                            value="{{userInfo.password}}" disabled />
+                    </ng-template>
+
+                    <ng-template #showPass>
+                        <input matInput placeholder="Generate the password..." type="type" value="{{userInfo.password}}"
+                            disabled />
+                    </ng-template>
+                </mat-form-field>
+
+
+                <button mat-button class="gen-btn" (click)="GeneratePassword()">Generate Password</button>
+            </div>
+            <div class="field">
+                <label>Role :</label>
+                <mat-form-field>
+                    <mat-select panelClass="selectPanel2" (selectionChange)="onChange()" [(value)]="userInfo.role">
+
+                        <div *ngFor="let rol of Roles">
+                            <mat-option value="{{rol}}">{{rol}}</mat-option>
+                        </div>
                     </mat-select>
                 </mat-form-field>
             </div>
             <div class="field" *ngIf="RoleActive()">
                 <label>Sector :</label>
-                <mat-form-field >
-                    <mat-select placeholder="select" multiple  panelClass="selectPanel2" value="SelectedSector" [(ngModel)]="SelectedSector">
-                        <div *ngFor="let sector of Sectors">
-                            <mat-option value="{{sector.id}}">{{sector.detail}}</mat-option>
-                            </div>
-                    </mat-select>
-                </mat-form-field>
+                <form [formGroup]="searchUserForm">
+                    <mat-form-field>
+                        <mat-select placeholder="select" formControlName="userType" multiple>
+                            <mat-label>Filter</mat-label>
+                            <input class="nmi" placeholder="Ex.901010181" matInput
+                                (keyup)="filterListCareUnit($event.target.value)">
+                            <mat-option #allSelected (click)="toggleAllSelection()" [value]="0">All</mat-option>
+                            <mat-option *ngFor="let sector of Sectors" [value]="sector.id"
+                                (click)="togglePerOne(allSelected.viewValue)">
+                                {{sector.detail}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </form>
             </div>
             <div class="btns">
                 <button class="btn-red" mat-button routerLink="/users">Cancel</button>
                 <button class="btn-green" mat-button (click)="UpdateUser()">Update</button>
             </div>
         </div>
-        
+
     </div>
-    
+
 </div>
