--- a/frontend/src/app/admin/add-user/add-user.component.css
+++ b/frontend/src/app/admin/add-user/add-user.component.css
@@ -39,8 +39,13 @@
     gap: 3%;
     margin: 5px;
 }
-.field mat-form-field{
+.field mat-foforrm-field{
     width:300px !important;
+}
+
+.nmi{
+    width: 300px;
+    height: 40px;
 }
 
 .field mat-form-field input::placeholder{
