--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -47,15 +47,13 @@
         </div>
       
         <table mat-table matSort [dataSource]="dataSource">
-          <ng-container matColumnDef="Id">
+          <!-- <ng-container matColumnDef="Id">
             <th class="header id-column" mat-header-cell *matHeaderCellDef>
               <span>Id</span>
-              <!-- <button mat-button class="float-right btn-icon">
-                <mat-icon class="sort-icon"></mat-icon>
-              </button> -->
+              
             </th>
             <td mat-cell *matCellDef="let request">{{request.UserID}}</td>
-          </ng-container>
+          </ng-container> -->
           
           <ng-container matColumnDef="Name">
             <th class="header name-column" mat-header-cell *matHeaderCellDef>
@@ -105,9 +103,7 @@
               </button> -->
             </th>
             <td mat-cell *matCellDef="let request">
-              <ng-container *ngFor="let role of request.Roles" class="role-td">
-                <div>{{role}}</div>
-              </ng-container>
+              {{request.role}}
             </td>
           </ng-container>
 
