--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -4,19 +4,30 @@
       <div class="header">
         <p>Sign in</p>
       </div>
+
+      <div class="error-message" *ngIf="errorMessage">
+        <span>
+          {{errorMessage}}
+        </span>
+        <mat-icon (click)="clearErrMesg()">clear</mat-icon>
+      </div>
+      
       <div>
     
-        <mat-form-field >
-          <mat-select placeholder="select your role" (selectionChange)="onChange()" panelClass="selectPanel2" [(value)]="select"  >
-              
-              <div *ngFor="let rol of RoleSelected">
-                  <mat-option  value="{{rol}}">{{rol}} </mat-option>
-                  </div>
-          </mat-select>
-      </mat-form-field>
+        <div class="role-div">
+          <mat-form-field >
+            <mat-select placeholder="Select your role" (selectionChange)="onChange()" panelClass="selectPanel2" [(value)]="selectedRole"  >
+                <div *ngFor="let rol of RoleSelected">
+                    <mat-option  value="{{rol}}">{{rol}} </mat-option>
+                    </div>
+            </mat-select>
+          </mat-form-field>
+        </div>
 
       </div>
-      <form name="loginForm" [formGroup]="loginForm">
+
+      <form name="loginForm" [formGroup]="loginForm" *ngIf="selectedRole">
+
         <div class="emailInput">
           <mat-form-field class="full-width" appearance="outline">
             <mat-label>Email</mat-label>
@@ -26,13 +37,14 @@
             </mat-error>
           </mat-form-field>
         </div>
+
         <div>
           <span>
             <a class="text-link" class="aLink" routerLink="/auth/forgot-password">Forgot Password?</a>
           </span>
           <mat-form-field class="full-width" appearance="outline">
             <mat-label>Password</mat-label>
-            <input formControlName="password" matInput [type]=" hide ? 'password' : 'text'" required />
+            <input formControlName="password" matInput [type]=" hide==true ? 'password' : 'text'" required />
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide Password'"
               [attr.aria-pressed]="hide">
               <mat-icon>
@@ -43,7 +55,10 @@
               Password is required
             </mat-error>
           </mat-form-field>
+         
         </div>
+
+        
         <button mat-flat-button color="primary" (click)="onLogin()">Sign in</button>
        
       </form> 
