--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -10,12 +10,7 @@
     background-color: #AFE3C6;
   }
 
-  mat-card-content{
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-  }
+  
   mat-card {
     width: 500px;
     text-align: center;
@@ -25,6 +20,12 @@
    vertical-align: center;
   }
   
+  mat-card-content{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
   .role-div{
     margin-top: 40px;
   }
@@ -113,14 +114,42 @@
   }
   
   mat-card {
-    max-width: 500px;
+    width: 500px;
     text-align: center;
     max-height: 600px;
    margin-left: auto;
    margin-right: auto;
    vertical-align: center;
   }
-  
+  mat-card-content{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .role-div{
+    margin-top: 40px;
+  }
+
+  .error-message{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(224, 185, 185);
+    width: 340px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 6px;
+  }
+  .error-message span{
+    font-size: 13px;
+  }
+
+  .error-message mat-icon{
+    cursor: pointer;
+  }
+
   .header{
     text-align: center;
     color: #27AE61;
@@ -186,13 +215,42 @@
   }
   
   mat-card {
-    max-width: 500px;
+    width: 500px;
     text-align: center;
     max-height: 600px;
    margin-left: auto;
    margin-right: auto;
    vertical-align: center;
   }
+  mat-card-content{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .role-div{
+    margin-top: 40px;
+  }
+
+  .error-message{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(224, 185, 185);
+    width: 340px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 6px;
+  }
+  .error-message span{
+    font-size: 13px;
+  }
+
+  .error-message mat-icon{
+    cursor: pointer;
+  }
+
   
   .header{
     text-align: center;
@@ -260,14 +318,43 @@
   }
   
   mat-card {
-    max-width: 300px;
+    width: 300px;
     text-align: center;
-    max-height: 500px;
+    max-height: 600px;
     margin-left: auto;
     margin-right: auto;
    vertical-align: center;
   }
   
+  mat-card-content{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .role-div{
+    margin-top: 40px;
+  }
+
+  .error-message{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(224, 185, 185);
+    width: 340px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 6px;
+  }
+  .error-message span{
+    font-size: 13px;
+  }
+
+  .error-message mat-icon{
+    cursor: pointer;
+  }
+
   .header{
     text-align: center;
     color: #27AE61;
@@ -333,12 +420,41 @@
   }
   
   mat-card {
-    max-width: 250px;
+    width: 250px;
     text-align: center;
-    max-height: 250px;
+    max-height: 350px;
    margin-left: auto;
    margin-right: auto;
    vertical-align: center;
+  }
+
+  mat-card-content{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .role-div{
+    margin-top: 40px;
+  }
+
+  .error-message{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(224, 185, 185);
+    width: 340px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 6px;
+  }
+  .error-message span{
+    font-size: 13px;
+  }
+
+  .error-message mat-icon{
+    cursor: pointer;
   }
 
   
