--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -74,7 +74,7 @@
                 <label>Sector :</label>
                 <form [formGroup]="searchUserForm">
                     <mat-form-field>
-                        <mat-select placeholder="select" formControlName="userType" multiple >
+                        <mat-select placeholder="select" formControlName="userType" multiple value="SelectedSector" [(ngModel)]="SelectedSector" >
                             <mat-label>Filter</mat-label>
                             <input class="nmi" placeholder="Ex.901010181" matInput
                                 (keyup)="filterListCareUnit($event.target.value)">
