--- a/frontend/src/app/admin/add-user/add-user.component.html
+++ b/frontend/src/app/admin/add-user/add-user.component.html
@@ -81,7 +81,8 @@
                 <label>Sector :</label>
                 <form [formGroup]="searchUserForm">
                     <mat-form-field>
-                        <mat-select placeholder="select" formControlName="userType" multiple>
+                        <mat-select placeholder="select" formControlName="userType" multiple (selectionChange)="onChange()"
+                        [(ngModel)]="SelectedSector">
                             <!-- <mat-label>Filter</mat-label>
                             <input class="nmi" placeholder="Ex.901010181" matInput (keyup)="filterListCareUnit($event.target.value)" > -->
                             <mat-option>
