--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -70,27 +70,32 @@
                     </mat-select>
                 </mat-form-field>
             </div>
+            <!-- <div class="field" *ngIf="RoleActive()">
+                <label>Sector :</label>
+                <mat-form-field >
+                    <mat-select placeholder="select" multiple  panelClass="selectPanel2" value="SelectedSector" [(ngModel)]="SelectedSector">
+                        <div *ngFor="let sector of Sectors">
+                            <mat-option value="{{sector.id}}">{{sector.detail}}</mat-option>
+                            </div>
+                    </mat-select>
+                </mat-form-field>
+            </div> -->
             <div class="field" *ngIf="RoleActive()">
                 <label>Sector :</label>
                 <form [formGroup]="searchUserForm">
-                    {{SelectedSector}}
                     <mat-form-field>
-                        <mat-select placeholder="select" multiple formControlName="userType"  (selectionChange)="onChange()"  [(value)]="SelectedSector">
+                        <mat-select placeholder="select" formControlName="userType"  multiple  value="SelectedSector"  [(ngModel)]="SelectedSector" >
                             <mat-label>Filter</mat-label>
-                            <input class="nmi" placeholder="Ex.901010181" matInput
-                                (keyup)="filterListCareUnit($event.target.value)">
+                            <input class="nmi" placeholder="Ex.901010181" matInput (keyup)="filterListCareUnit($event.target.value)" >
                             <mat-option #allSelected (click)="toggleAllSelection()" [value]="0">All</mat-option>
-                            <div *ngFor="let sector of Sectors">
-                            <mat-option  
+                            <mat-option *ngFor="let sector of Sectors" value="{{sector.id}}"
                                 (click)="togglePerOne(allSelected.viewValue)">
                                 {{sector.detail}}
                             </mat-option>
-                            </div>
-                            
                         </mat-select>
                     </mat-form-field>
-                    
                 </form>
+            </div>
             <div class="btns">
                 <button class="btn-red" mat-button routerLink="/users">Cancel</button>
                 <button class="btn-green" mat-button (click)="UpdateUser()">Update</button>
