fix mat select search

--- a/frontend/src/app/admin/add-user/add-user.component.html
+++ b/frontend/src/app/admin/add-user/add-user.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="add-form">
             <!-- <div class="field"> -->
-                <!-- <label>Id User :</label>
+            <!-- <label>Id User :</label>
                 <button mat-button disabled class="matricule">{{UserID}}</button>
             </div> -->
             <div class="field">
@@ -57,15 +57,17 @@
 
             <div class="field">
                 <label>Role :</label>
-                <mat-form-field >
-                    <mat-select placeholder="select"  panelClass="selectPanel2"  (selectionChange)="onChange()" [(value)]="role">   
+                <mat-form-field>
+                    <mat-select placeholder="select" panelClass="selectPanel2" (selectionChange)="onChange()"
+                        [(value)]="role">
                         <div *ngFor="let rol of Roles">
                             <mat-option value="{{rol}}">{{rol}}</mat-option>
                         </div>
                     </mat-select>
                 </mat-form-field>
-                <button mat-button class="gen-btn" *ngIf="RoleSelected.length!=0" (click)="AddNewRole()">Add Role</button>
-                                
+                <button mat-button class="gen-btn" *ngIf="RoleSelected.length!=0" (click)="AddNewRole()">Add
+                    Role</button>
+
                 <!-- <label>Role Selected:</label>
                 <mat-form-field >
                     <mat-select placeholder="select"  panelClass="selectPanel2"   >
@@ -76,14 +78,15 @@
                     </mat-select>
                 </mat-form-field> -->
             </div>
-            
+
             <div class="field" *ngIf="RoleActive()">
                 <label>Sector :</label>
                 <form [formGroup]="searchUserForm">
                     <mat-form-field>
                         <mat-select placeholder="select" formControlName="userType" multiple>
                             <mat-label>Filter</mat-label>
-                            <input class="nmi" placeholder="Ex.901010181" matInput (keyup)="filterListCareUnit($event.target.value)" >
+                            <input class="nmi" placeholder="Ex.901010181" matInput
+                                (keyup)="filterListCareUnit($event.target.value)">
                             <mat-option #allSelected (click)="toggleAllSelection()" [value]="0">All</mat-option>
                             <mat-option *ngFor="let sector of Sectors" [value]="sector.id"
                                 (click)="togglePerOne(allSelected.viewValue)">
@@ -101,7 +104,7 @@
                         <mat-icon (click)="RemoveRole(rol)">clear</mat-icon>
                     </div>
                 </ng-container>
-                
+
             </div>
 
             <div class="btns">
