--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -30,7 +30,7 @@
             <!-- =============== -->
             <div class="element-container">
                   <div class="select-input">
-                        <mat-select panelClass="selectPanel" (selectionChange)="onChange2()" [(ngModel)]="option_retail"
+                        <mat-select panelClass="selectPanel" (selectionChange)="onChange3()" [(ngModel)]="option_retail"
                               placeholder="PDV Type">
                               <mat-option value="All">All</mat-option>
                               <mat-option value="Audit">Gros</mat-option>
@@ -41,7 +41,7 @@
             </div>
             <div class="element-container">
                   <div class="select-input">
-                        <mat-select panelClass="selectPanel" (selectionChange)="onChange()" [(ngModel)]="option_done"
+                        <mat-select panelClass="selectPanel" (selectionChange)="onChange4()" [(ngModel)]="option_done"
                               placeholder="Validated filter">
                               <mat-option value="All">All</mat-option>
                               <mat-option value="Done"> Validated</mat-option>
