--- a/frontend/src/app/admin/roles/roles.component.html
+++ b/frontend/src/app/admin/roles/roles.component.html
@@ -4,53 +4,13 @@
         <div class="title-holder">
           <h1 class="list-title">Users</h1>
           <div class="btns">
-            <button mat-button style="background-color: #5b7e6d;" routerLink="/roles">Roles Management</button>
             <button mat-button routerLink="/addUser">Add New User</button>
           </div>
         </div>
 
-        <div class="filter-container">
-         
-            <mat-form-field>
-              <!-- <mat-label>Id User</mat-label> -->
-              <input placeholder="Search..." matInput (keyup)="applyFilter($event.target.value)"/>
-          </mat-form-field>
-
-            <mat-form-field>
-              <mat-select placeholder="Status" panelClass="selectPanel2" (selectionChange)="onChangeStatus($event)" [(ngModel)]="selectedStatus">
-                  <mat-option value="all">All</mat-option>
-                  <mat-option value="out of work">Out Of Work</mat-option>
-                  <mat-option value="Active">Active</mat-option>
-              </mat-select>
-            </mat-form-field>
-            
-
-            <mat-form-field>
-              <mat-select placeholder="Role" panelClass="selectPanel2"   (selectionChange)="onChangeRole($event)" [(ngModel)]="selectedRole">
-                  <mat-option value="all">All</mat-option>
-                  <ng-container *ngFor="let rol of roles">
-                    <mat-option value="{{rol}}">{{rol}}</mat-option>
-                  </ng-container>
-                   
-              
-              </mat-select>
-            </mat-form-field>
-
-            <mat-form-field >
-              <mat-select placeholder="Sector"  panelClass="selectPanel2" (selectionChange)="onChangeSector($event)" [(ngModel)]="selectedSector">
-                <mat-option value="all">All</mat-option>
-                <ng-container *ngFor="let sector of Sectors">
-                  <mat-option value="{{sector.id}}">{{sector.detail}}</mat-option>
-                </ng-container>
-              </mat-select>
-            </mat-form-field>
-            
-         
-
-        </div>
       
         <table mat-table matSort [dataSource]="dataSource">
-          <!-- <ng-container matColumnDef="Id">
+          <!--  <ng-container matColumnDef="Id">
             <th class="header id-column" mat-header-cell *matHeaderCellDef>
               <span>Id</span>
               
@@ -121,7 +81,6 @@
             <ng-container *matCellDef="let request" >
               <td mat-cell *ngIf="request.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
               <td mat-cell *ngIf="request.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
-              <td mat-cell *ngIf="!request.status"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">Active</span></td>
             </ng-container>
           
           </ng-container>
@@ -133,7 +92,7 @@
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">
+            <!-- <td mat-cell *matCellDef="let request">
                 <button mat-icon-button (click)="updateUser(request)" title="Update user"><mat-icon class="valid-icon">edit</mat-icon></button>
                 <button mat-icon-button (click)="deleteUser(request)" title="Delete user" *ngIf="request.status=='Active'">
                   <mat-icon class="refus-icon" >delete</mat-icon>
@@ -142,12 +101,12 @@
                   <mat-icon class="restore-icon" >restore_from_trash</mat-icon>
                 </button>
                 <button mat-icon-button (click)="viewUserDetails(request)" ><mat-icon class="detail-icon" title="Click to view user details.">remove_red_eye</mat-icon></button>
-            </td>
+            </td> -->
           </ng-container>
           
       
-          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr mat-row *matRowDef="let request; columns: columnsToDisplay"></tr>
+          <!-- <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let request; columns: columnsToDisplay"></tr> -->
       
         </table>
 
