--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -93,9 +93,11 @@
                 <button class="btn btn-warning btn-lg" *ngIf="isRecording" (click)="stopRecording()">Stop Recording</button>
             </div>
         </div>
-        <button mat-button class="btn-yellow" (click)="Send()">Send</button>
-
-        <button mat-button class="btn-yellow" (click)="ReadVideo()">Read</button>
+        <div class="btns">
+            <button mat-button class="btn-yellow">Cancel</button>
+            <button mat-button class="btn-red" (click)="Send()">Send</button>
+        </div>
+        
 
        </div>
     </ng-template> 
