--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -221,8 +221,8 @@
         </div>
 
         <div class="btns">
+            <button mat-button class="btn-red" routerLink="/map">Cancel</button>
             <button mat-button class="btn-yellow" (click)="Send()">Send</button>
-            <button mat-button class="btn-red" routerLink="map">Cancel</button>
         </div>
         
     </div>
