--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -1,14 +1,8 @@
 <div class="content-body">
-    <ng-container *ngIf="percentage == 100; else elseTemplate">
-        <p>Position Fixed</p>
-    </ng-container>
-    <ng-template #elseTemplate>
-        <p>Fixing Position...</p>
-    </ng-template>
+    <h2>Delete Client</h2>
+
 
     <div>
-        <pre>pos collectés: {{list.length}}</pre>
-        <pre>Accuracy: {{acc}}</pre>
         <pre>Distance according client : {{getDistance()}}</pre>
     </div>
 
@@ -26,7 +20,7 @@
             <button mat-button class="btn-yellow">Recalculate my position</button>
         </ng-template>
         <button mat-button class="btn-yellow" (click)="showcheck()"
-            [disabled]="(percentage!=100) ||  !Status">Next</button>
+            [disabled]="!Status">Next</button>
     </div>
     
     <ng-template  [ngIf]="!ValidatePosition()" [ngIfElse]="showBtn"> 
@@ -94,7 +88,7 @@
             </div>
         </div>
         <div class="btns">
-            <button mat-button class="btn-yellow">Cancel</button>
+            <button mat-button class="btn-yellow" routerLink="/map">Cancel</button>
             <button mat-button class="btn-red" (click)="Send()">Send</button>
         </div>
         
