--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -94,8 +94,8 @@
             </div>
         </div>
         <div class="btns">
-            <button mat-button class="btn-yellow">Cancel</button>
-            <button mat-button class="btn-red" (click)="Send()">Send</button>
+            <button mat-button class="btn-red">Cancel</button>
+            <button mat-button class="btn-yellow" (click)="Send()">Send</button>
         </div>
         
 
