Fix sector latency

--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -46,6 +46,7 @@
                               <mat-option value="All">All</mat-option>
                               <mat-option value="Done"> Validated</mat-option>
                               <mat-option value="Not_Done">Waiting for validation</mat-option>
+                              <mat-option value="Deleted">Deleted</mat-option>
                         </mat-select>
                   </div>
             </div>
